<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:outlineSpotShadowColor="@color/accent"
    app:cardBackgroundColor="@color/primary"
    app:cardCornerRadius="2dp"
    app:cardElevation="15dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/images_background"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_cart" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCategorie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/accent"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="@string/categories_label" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_rate" />

                <TextView
                    android:id="@+id/txtRate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_color_primary"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/rate_label" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/txtProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/secondary"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="@string/product_label" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textAlignment="textEnd"
            android:textColor="@color/price_color"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/price_label" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>