<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cart_dialog_bg"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="170dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_cart" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_color_secondary"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/stock" />

            <TextView
                android:id="@+id/txtStock"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/text_color_secondary"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:text="@string/count_label" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:text="@string/total"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/text_color_primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/count_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/price_color"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnMinusProduct"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/minus_sign_label"
            android:src="@drawable/ic_minus" />

        <EditText
            android:id="@+id/txtCounter"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/count_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/text_color_primary"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnAddProduct"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_add" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/text_color_accent"
            android:textStyle="bold"
            app:backgroundTint="@color/accent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>