<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fillViewport="true"
    tools:context=".ui.view.home.ProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary">

        <FrameLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llTopBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_back_arrow" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/btnFavorite"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/favorite_label"
                    android:src="@drawable/ic_fav_unselected" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:outlineSpotShadowColor="@color/secondary"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vpImages"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="5dp" />

                <TextView
                    android:id="@+id/txtDiscount"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:background="@drawable/discount_label_background"
                    android:rotation="-25"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_accent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/rate_label" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@color/accent"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="@string/categories_label" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/rate_label"
                            android:src="@drawable/ic_rate" />

                        <TextView
                            android:id="@+id/txtRate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:textColor="@color/text_color_primary"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            tools:text="@string/rate_label" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/txtProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/secondary"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:text="@string/product_label" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="5"
                    android:textColor="@color/text_color_secondary"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="@string/desc_label" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <ImageButton
                        android:id="@+id/btnAddToCart"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:contentDescription="@string/cart_label"
                        android:src="@drawable/ic_add_cart" />

                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:gravity="bottom|end"
                        android:textColor="@color/price_color"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:text="@string/price_label" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvProduct">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSimilarLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/similar_products_label"
                    android:textColor="@color/secondary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSimilarProducts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>