<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/primary"
    app:cardCornerRadius="5dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/images_background"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                tools:src="@drawable/ic_cart" />

            <TextView
                android:id="@+id/txtDiscount"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end|bottom"
                android:layout_marginVertical="20dp"
                android:background="@drawable/discount_label_background"
                android:rotation="-35"
                android:textAlignment="center"
                android:textColor="@color/text_color_accent"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="@string/rate_label" />

        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/txtProductName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:inputType="textNoSuggestions"
                android:maxLines="2"
                android:textAlignment="center"
                android:textColor="@color/accent"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="@string/product_label" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/price_color"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:text="@string/price_label" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>